# EventDispatcher

./: CMakeLists.txt  README.md
benchmarks/: EventDispatcherBenchmark.cpp
examples/: BasicUsage.cpp
include/: EventDispatcher.hpp
tests/: EventDispatcherTests.cpp
